--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Git Playground</h1>
-    <h2></h2>
+    <h2>Just testing various git options because I'm bored at work</h2>
 </body>
 </html>
